# ClipHype

./: .gitignore  Dockerfile  README.md  docker_start.sh  requirements.txt
aws/ec2/concat-clips/: Cargo.toml
aws/ec2/concat-clips/src/: main.rs
aws/ec2/yt_submission/: google_api.py  main.py
aws/lambda/drawtext-clip/: lambda_function.py
aws/lambda/ready-message/: index.js  lambda_function.py
aws/lambda/scale-clip/: index.js  lambda_function.py
aws/lambda/spot-request/: lambda_function.py
aws/lambda/upload-clip/: lambda_function.py
aws/lambda/yt-spot-request/: lambda_function.py
cliphype/: manage.py
cliphype/app/: admin.py  aws_api.py  google_api.py  models.py  serializers.py  tasks.py  twitch_api.py  urls.py  videos.py  views.py
cliphype/app/migrations/: 0001_initial.py  0002_auto_20210804_0718.py  0002_digest_fl_transition.py  0003_autoclip.py
cliphype/cliphype/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
cliphype/static/app/css/: style.css
cliphype/templates/: base.html
cliphype/templates/account/: login.html  logout.html
cliphype/templates/app/: base.html  googleapitest.html  index.html  policy.html  report.html  studio.html  unlink.html
cliphype/templates/privacy/: base.html  policy.html
cliphype/templates/socialaccount/: authentication_error.html  connections.html
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: ChArchiveView.vue  ChClipView.vue  ChHighlightView.vue  ChStreamerView.vue  ChVideoView.vue  Home.vue  NotFoundView.vue
(+8 files in other folders)
