[package]
name = "concat-clips"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
rusoto_core = "0.47"
rusoto_credential = "0.47.0"
rusoto_s3 = "0.47"
rusoto_ec2 = "0.47"
mysql = "21.0.1"
